// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ensureReport and reportFor > a new report starts empty and not started 1`] = `
{
  "assists": 0,
  "created_at": "<timestamp>",
  "fixture_id": "<uuid-2>",
  "flow_message_id": null,
  "flow_state": "not_started",
  "goals": 0,
  "id": "<uuid-1>",
  "motm_player_id": null,
  "nutmegs": 0,
  "own_goals": 0,
  "player_id": "<uuid-3>",
  "reported_goals_against": null,
  "reported_goals_for": null,
  "saves": 0,
  "self_rating": null,
  "submitted_at": null,
  "tackles": 0,
  "updated_at": "<timestamp>",
}
`;

exports[`ensureReport and reportFor > reportFor finds a seeded report 1`] = `
{
  "assists": 0,
  "created_at": "<timestamp>",
  "fixture_id": "<uuid-2>",
  "flow_message_id": null,
  "flow_state": "done",
  "goals": 0,
  "id": "<uuid-1>",
  "motm_player_id": "<uuid-4>",
  "nutmegs": 1,
  "own_goals": 0,
  "player_id": "<uuid-3>",
  "reported_goals_against": 9,
  "reported_goals_for": 7,
  "saves": 0,
  "self_rating": 6,
  "submitted_at": "<timestamp>",
  "tackles": 0,
  "updated_at": "<timestamp>",
}
`;

exports[`submitReport and submittedReports > submittedReports lists a played fixture 1`] = `
[
  {
    "assists": 1,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 2,
    "id": "<uuid-1>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-3>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 10,
    "submitted_at": "<timestamp>",
    "tackles": 6,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 1,
    "id": "<uuid-5>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 0,
    "own_goals": 0,
    "player_id": "<uuid-6>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 0,
    "self_rating": 5,
    "submitted_at": "<timestamp>",
    "tackles": 0,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 0,
    "id": "<uuid-7>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-8>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 0,
    "self_rating": 5,
    "submitted_at": "<timestamp>",
    "tackles": 1,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 0,
    "id": "<uuid-9>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-10>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 8,
    "submitted_at": "<timestamp>",
    "tackles": 5,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 2,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 2,
    "id": "<uuid-11>",
    "motm_player_id": "<uuid-12>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-4>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 10,
    "submitted_at": "<timestamp>",
    "tackles": 3,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 0,
    "id": "<uuid-13>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 1,
    "own_goals": 0,
    "player_id": "<uuid-14>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 6,
    "submitted_at": "<timestamp>",
    "tackles": 0,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 1,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 2,
    "id": "<uuid-15>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-16>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 6,
    "self_rating": 4,
    "submitted_at": "<timestamp>",
    "tackles": 0,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 1,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 0,
    "id": "<uuid-17>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-18>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 0,
    "self_rating": 8,
    "submitted_at": "<timestamp>",
    "tackles": 6,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 0,
    "id": "<uuid-19>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-20>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 5,
    "submitted_at": "<timestamp>",
    "tackles": 2,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 2,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 1,
    "id": "<uuid-21>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 1,
    "own_goals": 0,
    "player_id": "<uuid-22>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 6,
    "self_rating": 7,
    "submitted_at": "<timestamp>",
    "tackles": 6,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 2,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 0,
    "id": "<uuid-23>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 0,
    "own_goals": 0,
    "player_id": "<uuid-24>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 0,
    "self_rating": 4,
    "submitted_at": "<timestamp>",
    "tackles": 1,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 2,
    "id": "<uuid-25>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-26>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 0,
    "self_rating": 10,
    "submitted_at": "<timestamp>",
    "tackles": 6,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 1,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 2,
    "id": "<uuid-27>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 1,
    "own_goals": 0,
    "player_id": "<uuid-12>",
    "reported_goals_against": 7,
    "reported_goals_for": 9,
    "saves": 0,
    "self_rating": 8,
    "submitted_at": "<timestamp>",
    "tackles": 2,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 1,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 2,
    "id": "<uuid-28>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-29>",
    "reported_goals_against": 7,
    "reported_goals_for": 10,
    "saves": 0,
    "self_rating": 7,
    "submitted_at": "<timestamp>",
    "tackles": 4,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 0,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 1,
    "id": "<uuid-30>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 1,
    "own_goals": 0,
    "player_id": "<uuid-31>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 4,
    "submitted_at": "<timestamp>",
    "tackles": 3,
    "updated_at": "<timestamp>",
  },
  {
    "assists": 1,
    "created_at": "<timestamp>",
    "fixture_id": "<uuid-2>",
    "flow_message_id": null,
    "flow_state": "done",
    "goals": 1,
    "id": "<uuid-32>",
    "motm_player_id": "<uuid-4>",
    "nutmegs": 2,
    "own_goals": 0,
    "player_id": "<uuid-33>",
    "reported_goals_against": 9,
    "reported_goals_for": 7,
    "saves": 0,
    "self_rating": 9,
    "submitted_at": "<timestamp>",
    "tackles": 1,
    "updated_at": "<timestamp>",
  },
]
`;
